--- a/src/scss/app.css
+++ b/src/scss/app.css
@@ -8256,3 +8256,35 @@ body {
 
 .log-acre img {
   max-width: 100%; }
+
+@media screen and (min-width: 1024px) {
+  .upcoming-info h2 {
+    font-size: 15px; }
+  .content-info h2 {
+    font-size: 15px; }
+  .content-info p {
+    font-size: 15px; } }
+
+@media screen and (max-width: 767px) {
+  .upcoming-info h2 {
+    font-size: 15px; }
+  .content-info h2 {
+    font-size: 15px; }
+  .content-info p {
+    font-size: 15px; } }
+
+@media screen and (max-width: 480px) {
+  .upcoming-info h2 {
+    font-size: 15px; }
+  .content-info h2 {
+    font-size: 15px; }
+  .content-info p {
+    font-size: 15px; } }
+
+@media screen and (max-width: 480px) {
+  .upcoming-info h2 {
+    font-size: 10px; }
+  .content-info h2 {
+    font-size: 10px; }
+  .content-info p {
+    font-size: 10px; } }
