--- a/src/scss/layout/_globals.scss
+++ b/src/scss/layout/_globals.scss
@@ -169,3 +169,10 @@ body {
 .log-acre img {
   max-width: 100%;
 }
+h4 span {
+  font-size: 18px;
+  font-weight: 400;
+}
+.text-justify {
+  text-align: justify;
+}
