--- a/src/scss/app.css
+++ b/src/scss/app.css
@@ -8110,20 +8110,16 @@ body {
     height: 100px; } }
 
 /*--Navbar--*/
-.nav li a {
-  margin: 2px 4px;
-  border: 1px solid transparent;
-  border-radius: 6px;
-  max-width: 100%;
-  color: var(--second-color) !important; }
-  .nav li a:hover {
-    margin: 2px 4px;
-    background-color: var(--main-color);
-    border-radius: 6px;
-    border: 1px solid var(--main-color);
-    box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.2);
-    transition: 0.2s;
-    width: 100% !important; }
+.imgGISIC {
+  width: 24px;
+  height: 24px; }
+
+.nav a {
+  border-radius: 4px;
+  margin: 4px;
+  padding: 4px; }
+  .nav a:hover {
+    background-color: #0d6efd; }
 
 /*-----slider-----*/
 .slider {
