--- a/src/scss/app.css
+++ b/src/scss/app.css
@@ -1025,12 +1025,18 @@ progress {
   .col-lg-1 {
     flex: 0 0 auto;
     width: 8.3333333333%; }
+  .col-lg-1-1 {
+      flex: 0 0 auto;
+      width: 5%; }
   .col-lg-2 {
     flex: 0 0 auto;
     width: 16.6666666667%; }
   .col-lg-3 {
     flex: 0 0 auto;
     width: 25%; }
+  .col-lg-3-3 {
+      flex: 0 0 auto;
+      width: 28%; }
   .col-lg-4 {
     flex: 0 0 auto;
     width: 33.3333333333%; }
@@ -1046,6 +1052,9 @@ progress {
   .col-lg-8 {
     flex: 0 0 auto;
     width: 66.6666666667%; }
+  .col-lg-8-8 {
+      flex: 0 0 auto;
+      width: 67%; }
   .col-lg-9 {
     flex: 0 0 auto;
     width: 75%; }
@@ -1632,7 +1641,7 @@ progress {
   border-width: 0;
   border-inline-end-width: 1px;
   border-radius: 0;
-  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out; }
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out; }
 
 @media (prefers-reduced-motion: reduce) {
   .form-control::file-selector-button {
@@ -1654,8 +1663,8 @@ progress {
   border-width: 0;
   border-inline-end-width: 1px;
   border-radius: 0;
-  -webkit-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out; }
+  -webkit-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out; }
 
 @media (prefers-reduced-motion: reduce) {
   .form-control::-webkit-file-upload-button {
@@ -1920,8 +1929,8 @@ textarea.form-control-lg {
   background-color: #0d6efd;
   border: 0;
   border-radius: 1rem;
-  -webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-  transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  -webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
   -webkit-appearance: none;
   appearance: none; }
 
@@ -1948,8 +1957,8 @@ textarea.form-control-lg {
   background-color: #0d6efd;
   border: 0;
   border-radius: 1rem;
-  -moz-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-  transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  -moz-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
   -moz-appearance: none;
   appearance: none; }
 
@@ -2290,7 +2299,7 @@ textarea.form-control.is-invalid {
   padding: 0.375rem 0.75rem;
   font-size: 1rem;
   border-radius: 0.25rem;
-  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out; }
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out; }
 
 @media (prefers-reduced-motion: reduce) {
   .btn {
@@ -3323,7 +3332,7 @@ fieldset:disabled .btn {
   display: block;
   padding: 0.5rem 1rem;
   text-decoration: none;
-  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out; }
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out; }
 
 @media (prefers-reduced-motion: reduce) {
   .nav-link {
@@ -3818,7 +3827,7 @@ fieldset:disabled .btn {
   border: 1px solid rgba(0, 0, 0, 0.125);
   border-radius: 0;
   overflow-anchor: none;
-  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out, border-radius 0.15s ease; }
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out, border-radius 0.15s ease; }
 
 @media (prefers-reduced-motion: reduce) {
   .accordion-button {
@@ -3932,7 +3941,7 @@ fieldset:disabled .btn {
   text-decoration: none;
   background-color: #fff;
   border: 1px solid #dee2e6;
-  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out; }
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out; }
 
 @media (prefers-reduced-motion: reduce) {
   .page-link {
@@ -5874,6 +5883,16 @@ fieldset:disabled .btn {
 .mx-5 {
   margin-right: 3rem !important;
   margin-left: 3rem !important; }
+.mx-6 {
+  box-shadow: 0em 0 0.8em rgb(155, 153, 153);
+  margin-bottom: 20rem !important;
+  padding-left: 10px;
+  padding-top: 10px;}
+.mx-7 {
+  box-shadow: 0em 0 0.8em rgb(155, 153, 153);
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 10px;}
 
 .mx-auto {
   margin-right: auto !important;
@@ -8259,6 +8278,9 @@ h4 span {
 
 .text-justify {
   text-align: justify; }
+.bold{
+  font-Weight: bold;
+}
 
 @media screen and (min-width: 1024px) {
   .upcoming-info h2 {
