--- a/src/scss/app.css
+++ b/src/scss/app.css
@@ -1026,8 +1026,8 @@ progress {
     flex: 0 0 auto;
     width: 8.3333333333%; }
   .col-lg-1-1 {
-      flex: 0 0 auto;
-      width: 5%; }
+    flex: 0 0 auto;
+    width: 5%; }
   .col-lg-2 {
     flex: 0 0 auto;
     width: 16.6666666667%; }
@@ -1035,8 +1035,8 @@ progress {
     flex: 0 0 auto;
     width: 25%; }
   .col-lg-3-3 {
-      flex: 0 0 auto;
-      width: 28%; }
+    flex: 0 0 auto;
+    width: 28%; }
   .col-lg-4 {
     flex: 0 0 auto;
     width: 33.3333333333%; }
@@ -1052,7 +1052,7 @@ progress {
   .col-lg-8 {
     flex: 0 0 auto;
     width: 66.6666666667%; }
-  .col-lg-8-8 {
+    .col-lg-8-8 {
       flex: 0 0 auto;
       width: 67%; }
   .col-lg-9 {
@@ -5839,6 +5839,10 @@ fieldset:disabled .btn {
 .order-last {
   order: 6 !important; }
 
+  .bold{
+    font-weight: bold;
+  }
+
 .m-0 {
   margin: 0 !important; }
 
@@ -5884,15 +5888,12 @@ fieldset:disabled .btn {
   margin-right: 3rem !important;
   margin-left: 3rem !important; }
 .mx-6 {
-  box-shadow: 0em 0 0.8em rgb(155, 153, 153);
-  margin-bottom: 20rem !important;
-  padding-left: 10px;
-  padding-top: 10px;}
+  padding: 10px;
+  height: 130px;
+  box-shadow: 0em 0 0.5em rgb(165, 165, 165);}
 .mx-7 {
-  box-shadow: 0em 0 0.8em rgb(155, 153, 153);
-  padding-left: 10px;
-  padding-right: 10px;
-  padding-top: 10px;}
+  padding: 10px;
+  box-shadow: 0em 0 0.5em rgb(165, 165, 165);}
 
 .mx-auto {
   margin-right: auto !important;
@@ -6352,6 +6353,23 @@ fieldset:disabled .btn {
 
 .rounded-3 {
   border-radius: 0.3rem !important; }
+.event-card{
+  background:rgb(102, 102, 102);
+  padding-bottom:5px;
+  padding-right:5px;
+  padding-left:5px;
+  padding-top:5px;}
+.event-gray{
+  background:rgb(255, 255, 255);
+  font-weight:bold;
+  color:rgb(102, 102, 102);
+  font-size:20px;
+  padding-top: 7px;
+  padding-bottom: 7px;}
+.event-number{
+  font-weight:bold;
+  color:rgb(255, 255, 255);
+  font-size:20px;}
 
 .rounded-circle {
   border-radius: 50% !important; }
@@ -8278,9 +8296,6 @@ h4 span {
 
 .text-justify {
   text-align: justify; }
-.bold{
-  font-Weight: bold;
-}
 
 @media screen and (min-width: 1024px) {
   .upcoming-info h2 {
