--- a/src/scss/app.css
+++ b/src/scss/app.css
@@ -68,6 +68,10 @@ hr {
   border: 0;
   opacity: 0.25; }
 
+span{
+  font-weight: bold;
+}
+
 hr:not([size]) {
   height: 1px; }
 
@@ -460,6 +464,10 @@ progress {
 @media (min-width: 1200px) {
   .display-6 {
     font-size: 2.5rem; } }
+
+.text-bold{
+  text-align:center; 
+  font-weight:bold;}
 
 .list-unstyled {
   padding-left: 0;
@@ -1025,12 +1033,18 @@ progress {
   .col-lg-1 {
     flex: 0 0 auto;
     width: 8.3333333333%; }
+  .col-lg-1-1 {
+    flex: 0 0 auto;
+    width: 5%; }
   .col-lg-2 {
     flex: 0 0 auto;
     width: 16.6666666667%; }
   .col-lg-3 {
     flex: 0 0 auto;
     width: 25%; }
+  .col-lg-3-3 {
+    flex: 0 0 auto;
+    width: 28%; }
   .col-lg-4 {
     flex: 0 0 auto;
     width: 33.3333333333%; }
@@ -1046,6 +1060,9 @@ progress {
   .col-lg-8 {
     flex: 0 0 auto;
     width: 66.6666666667%; }
+    .col-lg-8-8 {
+      flex: 0 0 auto;
+      width: 67%; }
   .col-lg-9 {
     flex: 0 0 auto;
     width: 75%; }
@@ -1058,6 +1075,15 @@ progress {
   .col-lg-12 {
     flex: 0 0 auto;
     width: 100%; }
+  .col-lg-13 {
+    flex: 0 0 auto;
+    width: 49.15%; }
+  .col-lg-14 {
+    flex: 0 0 auto;
+    width: 15%; }
+  .col-lg-15 {
+    flex: 0 0 auto;
+    width: 83.18%; }
   .offset-lg-0 {
     margin-left: 0; }
   .offset-lg-1 {
@@ -1632,7 +1658,7 @@ progress {
   border-width: 0;
   border-inline-end-width: 1px;
   border-radius: 0;
-  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out; }
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out; }
 
 @media (prefers-reduced-motion: reduce) {
   .form-control::file-selector-button {
@@ -1654,8 +1680,8 @@ progress {
   border-width: 0;
   border-inline-end-width: 1px;
   border-radius: 0;
-  -webkit-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out; }
+  -webkit-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out; }
 
 @media (prefers-reduced-motion: reduce) {
   .form-control::-webkit-file-upload-button {
@@ -1920,8 +1946,8 @@ textarea.form-control-lg {
   background-color: #0d6efd;
   border: 0;
   border-radius: 1rem;
-  -webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-  transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  -webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
   -webkit-appearance: none;
   appearance: none; }
 
@@ -1948,8 +1974,8 @@ textarea.form-control-lg {
   background-color: #0d6efd;
   border: 0;
   border-radius: 1rem;
-  -moz-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-  transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  -moz-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
   -moz-appearance: none;
   appearance: none; }
 
@@ -2290,7 +2316,7 @@ textarea.form-control.is-invalid {
   padding: 0.375rem 0.75rem;
   font-size: 1rem;
   border-radius: 0.25rem;
-  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out; }
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out; }
 
 @media (prefers-reduced-motion: reduce) {
   .btn {
@@ -3323,7 +3349,7 @@ fieldset:disabled .btn {
   display: block;
   padding: 0.5rem 1rem;
   text-decoration: none;
-  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out; }
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out; }
 
 @media (prefers-reduced-motion: reduce) {
   .nav-link {
@@ -3818,7 +3844,7 @@ fieldset:disabled .btn {
   border: 1px solid rgba(0, 0, 0, 0.125);
   border-radius: 0;
   overflow-anchor: none;
-  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out, border-radius 0.15s ease; }
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out, border-radius 0.15s ease; }
 
 @media (prefers-reduced-motion: reduce) {
   .accordion-button {
@@ -3932,7 +3958,7 @@ fieldset:disabled .btn {
   text-decoration: none;
   background-color: #fff;
   border: 1px solid #dee2e6;
-  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out; }
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out; }
 
 @media (prefers-reduced-motion: reduce) {
   .page-link {
@@ -5830,6 +5856,10 @@ fieldset:disabled .btn {
 .order-last {
   order: 6 !important; }
 
+  .bold{
+    font-weight: bold;
+  }
+
 .m-0 {
   margin: 0 !important; }
 
@@ -5874,6 +5904,23 @@ fieldset:disabled .btn {
 .mx-5 {
   margin-right: 3rem !important;
   margin-left: 3rem !important; }
+.mx-6 {
+  padding: 10px;
+  height: 130px;
+  box-shadow: 0em 0 0.5em rgb(165, 165, 165);}
+.mx-7 {
+  padding: 15px;
+  box-shadow: 0em 0 0.5em rgb(165, 165, 165);}
+.mx-8 {
+  padding: 15px;
+  margin-right:20px;
+  box-shadow: 0em 0 0.5em rgb(165, 165, 165);}
+.mx-9 {
+  padding: 15px;
+  margin-right:20px;
+  height: 180px;
+  padding-top:35px;
+  box-shadow: 0em 0 0.5em rgb(165, 165, 165);}
 
 .mx-auto {
   margin-right: auto !important;
@@ -5927,6 +5974,8 @@ fieldset:disabled .btn {
 
 .mt-auto {
   margin-top: auto !important; }
+.mt-6{
+  margin-top:20px;}
 
 .me-0 {
   margin-right: 0 !important; }
@@ -6333,6 +6382,23 @@ fieldset:disabled .btn {
 
 .rounded-3 {
   border-radius: 0.3rem !important; }
+.event-card{
+  background:rgb(102, 102, 102);
+  padding-bottom:5px;
+  padding-right:5px;
+  padding-left:5px;
+  padding-top:5px;}
+.event-gray{
+  background:rgb(255, 255, 255);
+  font-weight:bold;
+  color:rgb(102, 102, 102);
+  font-size:20px;
+  padding-top: 7px;
+  padding-bottom: 7px;}
+.event-number{
+  font-weight:bold;
+  color:rgb(255, 255, 255);
+  font-size:20px;}
 
 .rounded-circle {
   border-radius: 50% !important; }
